# EuroGP2020-LookupTables

./: Readme.md
Code/cbrt/: build.bat  cbrt.par  cmaes_cbrt.c  compile.bat  e_sqrt.c  fuzz_exp.bat  gi_cbrt.c  gi_t_cbrt.awk  gi_t_cbrt.bat  main.c  main2.c  t_cbrt.c  test.bat  test2.bat  testCornerCases.bat
Code/cbrtNolog/: README.txt  fuzz1.bat  fuzz_int.bat  gi_cbrt.c  main2.c  make_t_cbrt.awk  t_cbrt.c  t_cbrt_LANGDONORIGINAL.c
Code/compare/: pom.xml
Code/compare/src/main/java/: ExecResult.java  Language.java  Main.java  Pair.java
Code/cppComparison/: CMakeLists.txt  benchCbrt.cpp  benchSqrt.cpp  benchSurt.cpp  cbrt.cpp  sqrt.cpp  surt.cpp
Code/javaComparison/: pom.xml
Code/javaComparison/src/main/java/: Bench.java  CbrtJava.java  SqrtJava.java  SurtJava.java
Code/userProvidedFn/: CMakeLists.txt  Makefile  actparcmaes.par  bench.c  build.bat  cmaes.par  cmaesRunner.c  cmake_install.cmake  errcmaes.err  fitfun.h  fitfunBitdiff.c  fitfunBitdiffVA.c  fitfunCenterBitdiff.c  fitfunCenterBitdiffFN.c  fitfunCenterBitdiffVA.c  fitfunCenterHardLog.c  fitfunCenterHardLogFN.c  fitfunCenterHardLogVA.c  fitfunCenterLog.c  fitfunCenterLogFN.c  fitfunCenterLogVA.c  fitfunCenterMul.c  fitfunCenterMulFN.c  fitfunCenterMulVA.c  fitfunCenterNoLog.c  fitfunCenterNoLogFN.c  fitfunCenterNoLogVA.c  fitfunDistrBitdiff.c  fitfunDistrBitdiffVA.c  fitfunDistrHardLog.c  fitfunDistrHardLogVA.c  fitfunDistrLog.c  fitfunDistrLogVA.c  fitfunDistrMul.c  fitfunDistrMulVA.c  fitfunDistrNoLog.c  fitfunDistrNoLogVA.c  fitfunHardLog.c  fitfunHardLogVA.c  fitfunLog.c  (+43 more)
Statistics/: ComparisonLogVsNoLog.xlsx  ComparisonMultiToSingleCbrt.xlsx  TheUltimateFitnessFunction.xlsx  benchmarking  benchmarking.xlsx  cbrtResult.xlsx  cbrtResults  logComparison.txt  multiRepeatsCbrtResults  multiRepeatsCbrtResults.xlsx  partialSingleInflResults  partialSingleInflResults.xlsx  sqrtResults  sqrtResults.xlsx  surtResults  surtResults.xlsx
